tests/NormalTests/paczka1/fuzzy1/11553861.err
Error in line 3: iVV A459 30,99
Error in line 2: sUdX S400 8,0
Error in line 7: iVV S203 15,8
Error in line 12: sUdX S203 25,7
Error in line 13: iVV S96 4,0
Error in line 26: sUdX S96 83,5
Error in line 37: iVV S400 18,8
